// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link color changes when hovered 1`] = `
<a
  className="normal"
  href="http://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Learn React updates branch
</a>
`;

exports[`Link color changes when hovered 2`] = `
<a
  className="hover"
  href="http://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Learn React updates branch
</a>
`;

exports[`Link color changes when hovered 3`] = `
<a
  className="normal"
  href="http://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Learn React updates branch
</a>
`;
